hphp/test/slow/shapes/comparisons-relational.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot use relational comparison operators (<, <=, >, >=, <=>) to compare darrays' in %s/comparisons-relational.php:6
%A
